# incognita

./: .cursorignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  app.py  git_commit_scheduler.py  overland_server.py  pre-commit.sh  pyproject.toml  recreate_git_with_lfs.sh  requirements.txt  serve_site.py
data/: geo_data.db
incognita/: app.py  config.py  countries.py  data_api.py  data_models.py  database.py  flights.py  geo_distance.py  gps.py  gps_calculations.py  gps_export.py  gps_geometry.py  gps_point_series.py  gps_trips_renderer.py  health_database.py  maps.py  motion_stats.py  observability.py  overland_server.py  processing.py  ssh_tunnel.py  telegram.py  utils.py  values.py.example  view.py
incognita/flights/: arc_layer.html  flights.csv
incognita/scripts/: compare_coordinates.py  generate_video.py  health_step_duplicates.py  plot_recent.py  refresh_db.py
install/: install.sh  projects_incognita-data-backup-scheduler.service  projects_incognita.service  projects_incognita_dashboard.service  projects_incognita_data-api.service  projects_incognita_data-backup-scheduler.service  projects_incognita_git_commit_scheduler.service  projects_overland_server.service
static/: gps_pydeck.html  styles.css  table_utils.js  trips_trace.js
templates/: flights.html  gps.html  gps_export.html  health.html  index.html  live.html  navbar.html  passport.html
tests/: test_config.py  test_data_api.py  test_data_models.py  test_database.py  test_geo_distance.py  test_gps_export.py  test_gps_trips_renderer.py  test_health_database.py  test_motion_stats.py  test_processing.py
