[tool.black]
line-length = 110
target-version = ['py312']
include = '\.py'

[tool.poetry]
name = "incognita"
version = "0.1.0"
description = ""
authors = ["momonala <mnalavadi@gmail.com>"]
readme = "README.md"
packages = [{include = "incognita"}]

[tool.poetry.dependencies]
python = "3.12.*"
pandas = "2.*"
joblib = "1.*"
pydeck = "0.*"
geopy = "2.*"
airportsdata = "*"
tqdm = "4.*"
numpy = "2.*"
flask = "3.*"
plotly = "6.*"
pycountry = "*"
geopandas = "1.*"
shapely = "2.*"
requests = "2.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"