[project]
name = "incognita"
version = "0.1.0"
description = ""
authors = [
    {name = "momonala", email = "mnalavadi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "joblib>=1.0.0,<2.0.0",
    "pydeck>=0.0.0,<1.0.0",
    "geopy>=2.0.0,<3.0.0",
    "airportsdata",
    "tqdm>=4.0.0,<5.0.0",
    "numpy>=2.0.0,<3.0.0",
    "flask>=3.0.0,<4.0.0",
    "plotly>=6.0.0,<7.0.0",
    "pycountry",
    "geopandas>=1.0.0,<2.0.0",
    "shapely>=2.0.0,<3.0.0",
    "requests>=2.0.0,<3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "isort>=7.0.0",
    "vulture>=2.14",
    "schedule>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["incognita"]

[project.scripts]
app = "incognita.app:main"
data-api = "incognita.data_api:main"
refresh-db = "incognita.scripts.refresh_db:main"

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
